# T-Ambassador-2025

./: README.md
exhibition/backend/: # 這是一個測試程式碼.txt  .gitignore  QUESTION_MANAGEMENT_GUIDE.md  README.md  db.sqlite3  pyproject.toml
exhibition/backend/benjamin/: pyvenv.cfg
exhibition/backend/benjamin/Scripts/: activate  activate.bat
exhibition/backend/scripts/: diagnostics.py
exhibition/backend/trips/: models.py  views.py
langchain/: LEARNING_GUIDE.md  README.md  agent.py  demo.py  final_test.py  main.py  pyproject.toml  run_examples.py  simple_agent.py  simple_agent_with_memory.py  test_agent.py  test_all_versions.py  test_final.py  test_main.py
langchain/versions/: v1_basic_financial_qa.py  v2_financial_qa_with_stock.py  v3_financial_qa_with_news.py
