[project]
name = "langchain-agent"
version = "0.1.0"
description = "A LangChain AI Agent example"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.0",
    "chromadb>=0.4.0",
    "langchain-ollama>=0.1.0",
    "pypdf>=3.0.0",
    "gdown>=4.0.0",
    "ddgs>=3.8.0",
    "mcp>=1.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
